--- a/_sass/layout/_tables.scss
+++ b/_sass/layout/_tables.scss
@@ -8,31 +8,33 @@ table {
   font-family: $global-font-family;
   font-size: $type-size-6;
   border-collapse: collapse;
-  border: 1px solid var(--global-border-color);
+  border: 0px solid var(--global-border-color);
 
-  & + table {
+  &+table {
     margin-top: 1em;
   }
 }
 
 thead {
   background-color: var(--global-border-color);
-  border-bottom: 1px solid var(--global-border-color);
+  border-bottom: 0px solid var(--global-border-color);
 }
 
 th {
   padding: 0.5em;
   font-weight: bold;
   text-align: left;
-  border-right: 1px solid var(--global-border-color);
+  border-right: 0px solid var(--global-border-color);
 }
 
 td {
   padding: 0.5em;
-  border-bottom: 1px solid var(--global-border-color);
-  border-right: 1px solid var(--global-border-color);
+  border-bottom: 0px solid var(--global-border-color);
+  border-right: 0px solid var(--global-border-color);
 }
 
-tr, td, th {
+tr,
+td,
+th {
   vertical-align: middle;
 }
