--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -10,6 +10,7 @@
 <link rel="manifest" href="{{ base_path }}/images/manifest.json"/>
 <link rel="icon" href="/images/favicon.ico"/>
 <meta name="theme-color" content="#ffffff"/>
+<meta name="google-site-verification" content="OMo308ezWoVIY64GJ6C_s20S41qPc8Qe_NtoNXs9BJ8" />
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
 
 
